--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+
+    <!-- Home Page Content -->
+    <div class="homepage-content">
+      <img src="path-to-your-image.jpg" alt="Your Image" class="homepage-image" />
+      <p class="homepage-text">Made by Kartikey Tripathi and Dhananjay Pratap Singh</p>
+    </div>
+
     <!-- Chatbot Toggler -->
     <button id="chatbot-toggler">
       <span class="material-symbols-rounded">mode_comment</span>
