--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Home Page Content -->
     <div class="homepage-content">
-      <img src="path-to-your-image.jpg" alt="Your Image" class="homepage-image" />
+      <img src="Screenshot 2025-01-10 000213.png" alt="Your Image" class="homepage-image" />
       <p class="homepage-text">Made by Kartikey Tripathi and Dhananjay Pratap Singh</p>
     </div>
 
