--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
   <body>
 
     <!-- Home Page Content -->
-    <div class="homepage-content">
-      <img src="Screenshot 2025-01-10 000213.png" alt="Your Image" class="homepage-image" />
-      <p class="homepage-text">Made by Kartikey Tripathi and Dhananjay Pratap Singh</p>
-    </div>
+   <div class="homepage-content">
+  <div class="homepage-text">
+    Made by Kartikey Tripathi and Dhananjay Pratap Singh
+  </div>
+</div>
+
 
     <!-- Chatbot Toggler -->
     <button id="chatbot-toggler">
