--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Chatbot | know right</title>
+    <title>AI Chatbot | CodingNepal</title>
     <!-- Linking Google fonts for icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0&family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+
+    <!-- Home Page Content -->
+    <div class="homepage-content">
+      <img src="Know right.png" alt="Your Image" class="homepage-image" />
+    </div>
+
     <!-- Chatbot Toggler -->
     <button id="chatbot-toggler">
       <span class="material-symbols-rounded">mode_comment</span>
@@ -59,12 +65,6 @@
           </div>
         </form>
       </div>
-    </div>
-
-     <div class="background-image">
-        <!-- Your homepage content goes here -->
-        <button class="chat-toggle" onclick="toggleChat()">Chat</button>
-        <!-- Include the rest of your content here -->
     </div>
 
     <!-- Linking Emoji Mart script for emoji picker -->
